Bug 422968 - Copying system information to the clipboard contains trailing spaces and an unnecessary line break
Summary: Copying system information to the clipboard contains trailing spaces and an u...
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: About this System (other bugs)
Version First Reported In: 5.19.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Claudius Ellsel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-14 12:50 UTC by Claudius Ellsel
Modified: 2020-06-17 13:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Claudius Ellsel 2020-06-14 12:50:12 UTC
SUMMARY
When copying the system information to the clipboard it contains some unwanted characters.

STEPS TO REPRODUCE
1. Open System Information
2. Use the button to copy it to the clipboard
3. Paste it somewhere

OBSERVED RESULT
There are some unwanted spaces and a newline at the end. Example:

German:
"Betriebssystem: Manjaro Linux 
KDE-Plasma-Version: 5.19.0
KDE-Frameworks-Version: 5.70.0
Qt-Version: 5.15.0
Kernel-Version: 5.6.17-1-MANJARO
Art des Betriebssystems: 64-bit
Prozessoren: 4 × Intel® Xeon® CPU E3-1225 v3 @ 3.20GHz
Speicher: 3,8 GiB Arbeitsspeicher
Grafikprozessor: Mesa DRI Intel® HD Graphics P4600/P4700 
"

English:
"Operating System: Manjaro Linux 
KDE Plasma Version: 5.19.0
KDE Frameworks Version: 5.70.0
Qt Version: 5.15.0
Kernel Version: 5.6.17-1-MANJARO
OS Type: 64-bit
Processors: 4 × Intel® Xeon® CPU E3-1225 v3 @ 3.20GHz
Memory: 3,8 GiB Arbeitsspeicher
Graphics Processor: Mesa DRI Intel® HD Graphics P4600/P4700 
"

EXPECTED RESULT
English:
"Operating System: Manjaro Linux
KDE Plasma Version: 5.19.0
KDE Frameworks Version: 5.70.0
Qt Version: 5.15.0
Kernel Version: 5.6.17-1-MANJARO
OS Type: 64-bit
Processors: 4 × Intel® Xeon® CPU E3-1225 v3 @ 3.20GHz
Memory: 3,8 GiB Arbeitsspeicher
Graphics Processor: Mesa DRI Intel® HD Graphics P4600/P4700"
Comment 1 Claudius Ellsel 2020-06-15 17:15:56 UTC
I just created a merge request for this: https://invent.kde.org/plasma/kinfocenter/-/merge_requests/5
Comment 2 Claudius Ellsel 2020-06-16 07:19:39 UTC
Git commit d3151145b84330c5e16856138bc04ca5e674ebf1 by Claudius Ellsel.
Committed on 16/06/2020 at 07:18.
Pushed by sitter into branch 'Plasma/5.19'.

Address trailing newline and spaces
FIXED-IN: 5.19.1

M  +3    -0    Modules/about-distro/src/GPUEntry.cpp
M  +5    -3    Modules/about-distro/src/Module.cpp

https://invent.kde.org/plasma/kinfocenter/commit/d3151145b84330c5e16856138bc04ca5e674ebf1