Address trailing newline and spaces

BUG: 422968
FIXED-IN: 5.19.1